<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".RegisterViewPresenter">

    <Button
        android:id="@+id/backtologin"
        android:layout_width="115dp"
        android:layout_height="21dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="44dp"
        android:layout_marginBottom="68dp"
        android:background="@android:color/transparent"
        android:gravity="center_vertical"
        android:text="@string/Clickhere"
        android:textAllCaps="false"
        android:textColor="#ffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/signup" />

    <TextView
        android:id="@+id/Icon_Background"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="146dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="146dp"
        android:background="@drawable/circle"
        app:layout_constraintBottom_toTopOf="@+id/signup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/Icon"
        android:layout_width="94dp"
        android:layout_height="49dp"
        android:contentDescription="@string/LOGO"
        android:rotation="-45"
        app:layout_constraintBottom_toBottomOf="@+id/Icon_Background"
        app:layout_constraintEnd_toEndOf="@+id/Icon_Background"
        app:layout_constraintHorizontal_bias="0.461"
        app:layout_constraintStart_toStartOf="@+id/Icon_Background"
        app:layout_constraintTop_toTopOf="@+id/Icon_Background"
        app:layout_constraintVertical_bias="0.464"
        app:srcCompat="@drawable/logo" />

    <EditText
        android:id="@+id/passwordbox"
        android:layout_width="292dp"
        android:layout_height="43dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="64dp"
        android:background="@drawable/passwordbox"
        android:drawableStart="@drawable/lock_icon"
        android:drawablePadding="5dp"
        android:ems="10"
        android:hint="@string/Password"
        android:importantForAutofill="no"
        android:inputType="textPersonName|textPassword"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        app:layout_constraintBottom_toTopOf="@+id/signup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Icon_Background"
        app:layout_constraintVertical_bias="0.414" />

    <EditText
        android:id="@+id/emailbox"
        android:layout_width="292dp"
        android:layout_height="43dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="64dp"
        android:background="@drawable/passwordbox"
        android:drawableStart="@drawable/email_icon"
        android:drawablePadding="5dp"
        android:ems="10"
        android:hint="@string/Email"
        android:importantForAutofill="no"
        android:inputType="textPersonName|textEmailAddress"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        app:layout_constraintBottom_toTopOf="@+id/namebox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordbox"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/namebox"
        android:layout_width="292dp"
        android:layout_height="43dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="85dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="65dp"
        android:background="@drawable/passwordbox"
        android:drawableStart="@drawable/name_icon"
        android:drawablePadding="5dp"
        android:ems="10"
        android:hint="@string/full_name"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        app:layout_constraintBottom_toTopOf="@+id/signupButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordbox"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/usernamebox"
        android:layout_width="293dp"
        android:layout_height="42dp"
        android:layout_marginStart="56dp"
        android:layout_marginEnd="63dp"
        android:background="@drawable/passwordbox"
        android:drawableStart="@drawable/user_icon"
        android:drawablePadding="5dp"
        android:ems="10"
        android:gravity="center_vertical"
        android:hint="@string/Username"
        android:importantForAutofill="no"
        android:inputType="textPersonName|textEmailAddress|textCapWords"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        app:layout_constraintBottom_toTopOf="@+id/passwordbox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Icon_Background"
        app:layout_constraintVertical_bias="0.513" />

    <Button
        android:id="@+id/signupButton"
        android:layout_width="254dp"
        android:layout_height="36dp"
        android:background="@drawable/loginbutton"
        android:onClick="registerHandler"
        android:text="@string/sign_up"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.83" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="76dp"
        android:layout_marginBottom="68dp"
        android:text="@string/already_have_an_account"
        android:textColor="#eceff1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/backtologin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup" />

    <EditText
        android:id="@+id/phonebox"
        android:layout_width="293dp"
        android:layout_height="42dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="63dp"
        android:layout_marginBottom="81dp"
        android:background="@drawable/passwordbox"
        android:drawablePadding="5dp"
        android:ems="10"
        android:hint="@string/Phone"
        android:importantForAutofill="no"
        android:inputType="phone"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/namebox"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>